# kvm-in-a-box

./: .gitignore  Main.hs  README.md  Supervise.hs  kvm-in-a-box.cabal  lolvm.sh  preseed.cfg
data/: preseed.cfg
data/sudoers/: kvm-in-a-box
debian/: changelog  control  copyright  kvm-in-a-box.install  kvm-in-a-box.links  rules  watch
debian/source/: options
scripts/: build-deploy.sh  di.sh
src/: BitUtils.hs  Config.hs  Console.hs  Dnsmasq.hs  Files.hs  FlagTH.hs  IP.hs  Iface.hs  Iptables.hs  JSON.hs  Log.hs  Lvm.hs  MAC.hs  Main.hs  MapJoin.hs  Options.hs  ParserUtils.hs  Passwd.hs  Qemu.hs  Read.hs  Resource.hs  Ssh.hs  Supervise.hs  Sysctl.hs  Systemd.hs  SystemdDBus.hs  Types.hs  Udev.hs  Utils.hs
src/Data/: SConfig.hs
tests/: Doctest.hs  OptionsTest.hs  TestIptables.hs  TestTHTest.hs  ip6tables.save  test.hs
tests/data/clean-system/create vm/ex/etc/iptables/: rules.v4  rules.v6
tests/data/clean-system/create vm; change vm --add-disk data/ex/etc/: group
tests/data/clean-system/create vm; change vm --add-disk data/ex/etc/iptables/: rules.v4  rules.v6
tests/data/clean-system/create vm; change vm --public --forward4 tcp:443:443/ex/etc/iptables/: rules.v4
tests/data/clean-system/create vm; remove vm; create vm; remove vm/ex/etc/: group  kvm-in-a-box.cfg
tests/data/clean-system/create vm; remove vm; create vm; remove vm/ex/etc/dnsmasq.d/: kib
tests/data/clean-system/create vm; remove vm; create vm; remove vm/ex/etc/iptables/: rules.v6
tests/data/clean-system/create vm;change vm --private/ex/etc/: group
tests/data/clean-system/create vm;change vm --private/ex/etc/iptables/: rules.v4  rules.v6
tests/data/clean-system/create vm;change vm --public/ex/etc/: shadow
tests/data/clean-system/create vm;change vm --public/ex/etc/dnsmasq.d/: kib
tests/data/clean-system/setup/ex/etc/ssh/: sshd_config
tests/data/clean-system/setup;create vm/ex/etc/: group
tests/data/full-system/setup; create vm --public; remove vm/ex/etc/: dnsmasq.kib.hosts  group  shadow
tests/data/full-system/setup; create vm --public; remove vm/ex/etc/iptables/: rules.v4
tests/data/full-system/setup; create vm --public; remove vm/in/etc/: group  passwd
tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/ex/etc/: group  shadow
tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/ex/etc/iptables/: rules.v4  rules.v6
tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/ex/etc/ssh/: sshd_config
tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/in/etc/iptables/: rules.v4  rules.v6
tests/data/full-system/setup;create vm/ex/etc/: group  passwd
tests/data/full-system/setup;create vm/ex/etc/iptables/: rules.v4
tests/data/full-system/setup;create vm/ex/etc/ssh/: sshd_config
tests/data/setup/ex/etc/ssh/: sshd_config
tests/data/setup;create vm;change vm --private/ex/etc/: passwd
tests/data/setup;create vm;change vm --private/ex/etc/dnsmasq.d/: kib
(+31 files in other folders)
