name:                kvm-in-a-box
version:             0.1.0.0
synopsis:            KVM Hypervisor in a box
description:         "Easy" to use command line too for generating KVM
                     hypervisor whole system configuration
license:             AGPL-3
license-file:        LICENSE
author:              Daniel Gröber <dxld@darkboxed.org>
maintainer:          dxld@darkboxed.org
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable kib
  main-is:             Main.hs
--  ghc-options:         -fdefer-typed-holes
  other-modules:       Iface,
                       Types,
                       Resource
  default-extensions: RecordWildCards, ViewPatterns, LambdaCase, MultiWayIf,
                      NamedFieldPuns, NoMonomorphismRestriction,
                      FlexibleContexts, DeriveGeneric, ScopedTypeVariables,
                      MultiParamTypeClasses, FunctionalDependencies,
                      FlexibleInstances, TupleSections
  other-extensions:   TemplateHaskell
  build-depends:       base >=4.6 && <4.9
                     , directory
                     , process >= 1.1.0.0
                     , optparse-applicative < 0.13
-- == 0.10.*

                     , containers
                     , unix
                     , filepath
                     , transformers
                     , split
                     , pretty-show
                     , deepseq
                     , temporary
                     , parsec
                     , template-haskell
                     , aeson
                     , unordered-containers
                     , text
                     , safe
                     , uri
--                     , vcs-revision
                     , mono-traversable
                     , bifunctors
                     , QuickCheck
                     , bytestring

--                     , iproute -- inlined deps:
                     , network
                     , byteorder
                     , appar
  hs-source-dirs:      src, ., iproute
  default-language:    Haskell2010


test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base, doctest

executable kib-supervise
  main-is:             Supervise.hs
  other-modules:
  default-extensions: RecordWildCards, ViewPatterns, LambdaCase, MultiWayIf,
                      NamedFieldPuns, NoMonomorphismRestriction
  build-depends:       base >=4.6 && <4.9
                     , directory
                     , process >= 1.1.0.0
                     , unix
                     , filepath
                     , containers
                     , aeson
                     , unordered-containers
                     , text

  hs-source-dirs:      src, .
  default-language:    Haskell2010
